src/App.css
body {
  text-align: center;
  color: white;
  background-color: black;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  overflow: hidden;
  margin: 0;
}

@font-face {
  font-family: "arista_pro_triallight";
  src: url("./utils/webfontkit/arista-pro-light-trial-webfont.woff2")
      format("woff2"),
    url("./utils/webfontkit/arista-pro-light-trial-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

::-webkit-scrollbar-track {
  /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
  background-color: black;
}

::-webkit-scrollbar {
  width: 5px;
  background-color: #f5f5f5;
}

::-webkit-scrollbar-thumb {
  border-radius: 50px;
  background-color: #1b1b1b;
  /* border: 2px solid #555555; */
}

.login-area input {
  /* text-align: right; */
  padding: 5px 40px;
  text-align: center;
  border: 2px solid rgb(37, 37, 37);
  background-color: rgb(37, 37, 37);
  border-radius: 5px;
  color: white;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  font-size: 25px;
  width: 400px;
}
.login-area input:focus {
  outline: none;
}

.later-input {
  position: relative;
  top: -60px;
}

.go-back {
  cursor: pointer;
  width: 40px;
  height: 20px;
  margin: auto;
  padding: 20px;
}

.login-input {
  position: relative;
  margin-top: 60vh;
}

.show-login-input {
  display: block;
}

.hide-login-input {
  display: none;
}

.app-nav {
  position: fixed;
  height: 80px;
  width: 100%;
  top: 0;
  z-index: 2;
  display: flex;
  align-items: center;
  overflow-x: auto;
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* IE 10+ */
}
.app-nav::-webkit-scrollbar {
  height: 0px;
  background: transparent; /* Chrome/Safari/Webkit */
}

.app-nav a:visited {
  color: white;
  text-decoration: none;
}

.app-title {
  /* position: fixed;
  top: 50px; */
  margin: 50px auto;
  display: inline-block;
  letter-spacing: 2px;
  font-weight: normal;
  text-align: center;
  color: grey;
  /* font-family: "arista_pro_triallight"; */
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  font-size: 25px;
}

.connections {
  padding: 10px 10px 10px 0px;
  margin-left: 15px;
  margin-right: auto;
  border-radius: 10px;
  background-color: black;
  display: flex;
  flex-direction: row;
  /* justify-content: center; */
  /* position: fixed; */
  /* left: 20px; */
  /* top: 15px; */
  /* height: 55px; */
  /* overflow-x: auto; */
}

.contact {
  margin: 0px 3px;
  padding: 0px 10px 3px 10px;
  border: 2px solid black;
  border-radius: 50px;
  cursor: pointer;
  transition: 0.3s;
}

@media (hover: hover) {
  .contact:hover {
    border: 2px solid grey;
  }
}

.selected-contact {
  /* padding: 0px 10px 3px 10px; */
  color: black;
  font-weight: bold;
  /* font-style: italic; */
  padding: 0px 20px 3px 20px;
  /* border: 2px solid rgb(37, 37, 37); */
  border-radius: 5px;
  background-color: rgb(255, 249, 246);
}

.inactive-contact {
  color: lightgrey;
}

.online-contact {
  color: rgb(255, 189, 158);
}

.live-contact {
  color: black;
  font-weight: bold;
  font-style: italic;
  padding: 0px 20px 3px 20px;
  /* border: 2px solid rgb(37, 37, 37); */
  border-radius: 5px;
  background-color: rgb(255, 189, 158);
}

.add-contact {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.add-contact button {
  position: relative;
  height: 24px;
  width: 24px;
  /* padding: 0; */
  color: grey;
  border: none;
  background-color: transparent;
  outline: none;
  /* margin-top: 12px; */
  margin-left: 15px;
  opacity: 0.9;
  z-index: 2;
  transition: 0.4s;
}

.add-contact-text {
  display: none;
}

@media (hover: hover) {
  .add-contact button {
    cursor: pointer;
    opacity: 0.6;
  }
  .add-contact button:hover {
    cursor: pointer;
    opacity: 0.9;
  }

  .add-contact-text {
    display: block;
    /* width: fit-content; */
    /* white-space: nowrap; */
    position: absolute;
    padding: 0px 10px;
    margin-left: 45px;
    /* margin-right: 300px; */
    color: grey;
    cursor: default;
    z-index: 3;
    transition: 0.4s;
  }
  .show-add-contact-text {
    opacity: 1;
  }
  .hide-add-contact-text {
    opacity: 0;
    pointer-events: none;
  }
}

.add-contact-input {
  /* display: block; */
  position: relative;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  font-size: 15px;
  margin-left: 10px;
  margin-right: 10px;
  height: 25px;
  width: 160px;
  color: white;
  /* border: solid 1px rgb(43, 43, 43); */
  background-color: rgb(43, 43, 43);
  /* margin: 0px; */
  padding: 5px 15px;
  border-radius: 50px;
  border: none;
  opacity: 1;
  z-index: 4;
  transition: 0.35s ease-in-out;
}

.add-contact input:focus {
  outline: none;
}
.add-contact input::placeholder {
  color: rgb(121, 121, 121);
}

.hide-input {
  /* display: none; */
  opacity: 0;
  width: 0px;
  cursor: default;
  height: 0px;
  padding: 0px;
  /* margin-left: 0px;
  margin-right: 0px; */
}

@media (hover: hover) {
  .hide-input {
    /* display: none; */
    opacity: 0;
    width: 80px;
    cursor: default;

    /* height: 0px;
    padding: 0px;
    margin-left: 0px;
    margin-right: 0px; */
  }
}

.menu-button {
  margin-left: auto;
  padding: 0 23px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.menu-icon {
  position: relative;
  width: fit-content;
  height: fit-content;
  padding: 1px 1px 0px 1px;
  font-size: 1.2rem;
  color: black;
  background-color: lightgrey;
  border-radius: 50px;
  opacity: 0.6;
  cursor: pointer;
  z-index: 5;
  transition: 0.4s;
}

.menu-label {
  display: none;
}

@media (hover: hover) {
  .menu-icon {
    opacity: 0.4;
  }

  .menu-icon:hover {
    opacity: 0.6;
  }

  .menu-label {
    display: block;
    cursor: default;
    width: fit-content;
    margin: 0px 10px 2px 0px;
    /* position: relative;
    top: -7px;
    left: -8px; */
    color: grey;
    transition: 0.4s;
  }

  .show-menu-label {
    opacity: 1;
  }

  .hide-menu-label {
    opacity: 0;
  }
}

.menu-window {
  position: fixed;
  top: 21px;
  right: 15px;
  max-width: 70vw;
  max-height: 60vh;
  /* overflow: auto; */
  display: flex;
  flex-direction: column;
  padding: 35px 40px;
  border: 2px solid rgb(37, 37, 37);
  border-radius: 5px;
  background-color: black;
  transition: 0.4s;
  z-index: 4;
}

/* .show-menu-window {
  display: block;
} */

.hide-menu-window {
  padding: 0px;

  max-width: 50px;
  max-height: 50px;
  border-radius: 50px;
  overflow: hidden;
  opacity: 0;
}

.menu-window p {
  color: white;
  text-decoration: none;
  padding: 5px 40px;
  opacity: 0.8;
  transition: 0.4s;
}

.hide-menu-window p {
  font-size: 0px;
  padding: 0px;
  opacity: 0;
}

.menu-window p:hover {
  color: white;
  cursor: pointer;
  opacity: 1;
}

.dark-background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: black;
  opacity: 0.8;
  transition: 0.3s;
}

.hide-dark-background {
  opacity: 0;
  pointer-events: none;
}

.register-form {
  display: flex;
  flex-direction: column;
  width: 270px;
  margin: auto;
}

.login-form {
  display: flex;
  flex-direction: column;
  width: 270px;
  margin: auto;
}

.user-selection {
  margin-top: 20vh;
}

.user-button {
  display: inline-block;
  margin: 20px auto;
}

.delete-user-button {
  display: inline-block;
  margin: 20px auto;
}

.Chat {
  position: absolute;
  bottom: 80;
  width: 100%;
  margin-top: 80px;
  display: flex;
  align-items: center;
  flex-direction: column-reverse;
  overflow-y: scroll;
  z-index: 1;
}

.chat-log {
  width: 100%;
  max-width: 900px;
  display: flex;
  flex: 1;
  flex-direction: column-reverse;
  justify-content: flex-start;
  overflow-wrap: break-word;
  list-style: none;
  padding-top: 100px;
  padding-left: 0px;
}

@media (min-width: 700px) {
  .chat-log {
    width: 50%;
  }
}

.my-message-line {
  text-align: right;
  white-space: pre;
  /* padding-right: 308px; */
}

.my-message {
  display: inline-block;
  white-space: normal;
  text-align: left;
  min-height: 21px;
  max-width: 50%;
  margin-bottom: 8px;
  padding: 5px 40px;
  border: 2px solid rgb(37, 37, 37);
  background-color: rgb(37, 37, 37);
  border-radius: 5px;
}

.their-message {
  /* text-align: left; */
  color: white;
  width: fit-content;
  max-width: 50%;
  min-height: 21px;
  margin-bottom: 8px;
  padding: 5px 40px;
  border: 2px solid rgb(37, 37, 37);
  border-radius: 5px;
}

/* .their-live-text-container {
  position: fixed;
  bottom: 120px;
  width: 50%;
  margin: auto;
  overflow-wrap: break-word;
  pointer-events: none;
} */

.their-live-text {
  font-size: 25px;
  color: white;
  width: fit-content;
  max-width: 50%;
  min-height: 21px;
  margin-bottom: 8px;
  padding: 5px 40px;
  border: 2px solid rgb(37, 37, 37);
  border-radius: 5px;
}

.message-form {
  /* text-align: right; */
  /* white-space: pre; */
  width: 50%;
  height: 116px;
  position: fixed;
  bottom: 0;
  margin: auto;
  /* left: -20px; */
  display: flex;
  flex-direction: column;
  /* align-items: flex-start; */
  /* justify-content: flex-end; */
  z-index: 1;
  pointer-events: none;
}

.message-input {
  /* text-align: right; */
  font-size: 25px;
  width: 50%;
  margin-left: auto;
  margin-right: 1px;
  padding: 5px 40px;
  border: 1.5px solid rgb(37, 37, 37);
  background-color: rgb(37, 37, 37);
  border-radius: 5px;
  color: white;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  pointer-events: auto;
}

/* @media (max-width: 700px) {
  .message-form {
    width: 100%;
  }
  .message-input {
    width: 50%;
  }
} */

.message-input:focus {
  outline: none;
}

#message-form input:focus {
  outline: none;
}

.chat-bottom {
  height: 100px;
  width: 100%;
}

/* .hidden {
  display: none;
} */

